<resources>
    <string name="app_name">DressApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="category">Category</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="explore_all">Explore All</string>
    <string name="map">Map</string>
    <string name="edit_product">Edit Product</string>
    <string name="logout">Logout</string>
    <string name="backToProduct">Back To Product Details</string>
    <string name="google_map_api_key">AIzaSyCaOC_W5r1eDgkWpYTmgMp5Ij5OzbJ-jzY</string>
    <string name="my_products">My Products</string>
    <string-array name="choose_gender">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string-array name="choose_size">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
    <string-array name="choose_category">
        <item>Blazer</item>
        <item>Dress</item>
        <item>Jacket</item>
        <item>Pants</item>
        <item>Suit</item>
    </string-array>
</resources>