<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostFragment">

    <include layout="@layout/top_bar_nav" android:id="@+id/top_bar" />

    <ImageButton
        android:id="@+id/upload_img"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_marginBottom="250dp"
        android:src="@drawable/upload_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/gender_container"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_img">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="25sp"
            android:layout_marginRight="5dp"
            />

        <Spinner
            android:id="@+id/select_gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_container"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="25sp"
            android:layout_marginRight="3dp"
            />

        <Spinner
            android:id="@+id/select_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/size_container"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textSize="25sp"
            android:layout_marginRight="5dp"
            />

        <Spinner
            android:id="@+id/select_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <EditText
        android:id="@+id/new_post_price"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_container" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/app_btn"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_post_price"
        />

</androidx.constraintlayout.widget.ConstraintLayout>