<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProductPageFragment">

    <include layout="@layout/top_bar_nav" android:id="@+id/top_bar" />

    <ImageView
        android:id="@+id/product_preview"
        android:layout_width="320dp"
        android:layout_height="520dp"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <FrameLayout android:id="@+id/favorite_frame"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/product_preview"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        >

        <ImageButton
            android:id="@+id/favorite_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/favorite"
            />

        <ImageView android:id="@+id/favorite_bg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/circle" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/action_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_frame">

        <FrameLayout android:id="@+id/profile_frame"
            android:layout_width="90dp"
            android:layout_height="90dp">

            <ImageView android:id="@+id/user_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                />

            <ImageView android:id="@+id/profile_bg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/circle" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/prod_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="40sp"
            >
            <Button
                android:id="@+id/product_call"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/call"
                />
            <Button
                android:id="@+id/product_map"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/map"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="40sp"
            >
            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="30sp"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/product_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:layout_marginTop="5sp"
                android:textAlignment="center"
                android:textSize="30sp"
                />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/product_progress"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>